# rallycal

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  VALIDATION.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  railway.toml  render.yaml
.claude/: settings.json
.claude/commands/: generate-prd.md  generate-tasks.md  process-tasks.md
.claude/commands/devops/: git-commit.md
.claude/commands/protocols/: approval-gates.md  clarifying-questions.md  git-commit-standards.md  tech-stack-compliance.md  testing-guidelines.md
.claude/hooks/: timestamp-session.sh  update-claude-md.sh
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
config/: calendars.yaml
deploy/: railway-setup.md  render-setup.md
deploy/legacy-aws/: README.md
deploy/legacy-aws/terraform/: main.tf  variables.tf
deploy/legacy-aws/terraform/environments/production/: terraform.tfvars
deploy/legacy-aws/terraform/modules/vpc/: main.tf  variables.tf
product-specs/: prd-rallycal.md
product-specs/research/: rallycal-competitive-and-market-analysis.md
product-specs/tasks/: tasks-arch-refactor-v01.md  tasks-prd-rallycal.md  tasks-prd-rallycal_v2.md  tasks-prd-rallycal_v3.md  tasks-prd-rallycal_v4.md
scripts/: init-db.sql
src/rallycal/: __about__.py  __init__.py
src/rallycal/api/: __init__.py  main.py  routes.py
src/rallycal/config/: manager.py  models.py
src/rallycal/core/: logging.py  settings.py
src/rallycal/database/: engine.py  models.py  operations.py
src/rallycal/generators/: __init__.py  ical.py
src/rallycal/models/: event.py
src/rallycal/services/: fetcher.py  processor.py
src/rallycal/utils/: circuit_breaker.py  color_manager.py  deduplicator.py
terraform/: outputs.tf
terraform/environments/staging/: terraform.tfvars
terraform/modules/vpc/: outputs.tf
tests/: __init__.py  conftest.py
tests/e2e/: test_calendar_workflow.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_calendar_fetcher.py  test_database.py  test_event_processing.py  test_models.py
